--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,7 +25,7 @@ requirements:
     - python
     - numpy
     - eigen >=3.3.9
-    - pybind11
+    - pybind11 >=2.10
   run:
     - {{ compiler('cxx') }}
     - cmake >=3.13
